# nxgipd

./: .gitattributes  .gitignore  COPYRIGHT  LICENSE  Makefile.in  README  README.md  config.h.in  configuration.c  configure  ipc.c  misc.c  nx-584.c  nx-584.h  nxcmd.1  nxcmd.c  nxgipd.1  nxgipd.c  nxgipd.conf  nxgipd.h  nxstat.1  nxstat.c  probe.c  process.c  strl-funcs.c  strl-funcs.h  trigger.c
config/: configure.in
contrib/: alarm-event.sh  alarm-mqtt.sh  alarm.cgi  nxgipd.initscript  nxgipd.service
